Fixed button spacing and styling, cleanup.

--- a/main/webapp/modules/core/styles/common.less
+++ b/main/webapp/modules/core/styles/common.less
@@ -108,6 +108,7 @@ a img {
   display: inline-block;
   overflow: visible;
   font-size: 1em;
+  padding: 0.4em 1em;
   line-height: 1.4;
   color: #000;
   text-decoration: none;
@@ -119,12 +120,8 @@ a img {
   .rounded_corners(3px);
   }
 
-a.button {
-  padding: 1px 6px;
-}
-
-button.button {
-  padding: 0.4em 1em;
+a.small-button {
+  padding: 1px 6px !important;
 }
 
 .button:hover, a.button:hover { 
@@ -137,7 +134,6 @@ button.button {
 
 .button-primary, a.button-primary { 
   font-weight: bold;
-  padding: 1px 15px;
   }
 
 .button-pill-left, a.button-pill-left {
