--- a/main/webapp/modules/core/styles/util/dialog.less
+++ b/main/webapp/modules/core/styles/util/dialog.less
@@ -85,14 +85,14 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
   margin-right: 0.5em;
   font-size: 1.3em;
   display: flex;
-  column-gap: 5px;
+  column-gap: 0.4em;
   justify-content: right;
   padding: @padding_loose;
   }
 
 .dialog-footer .dialog-footer-bg {
   display: flex;
-  column-gap: 5px;
+  column-gap: 0.4em;
 }
 
 .dialog-busy {
